<resources>

    <string name="app_name">Денис Ефремов</string>

    <!--ID приложения в VK-->

    <integer name="com_vk_sdk_AppId">5537171</integer>

    <!--Fonts-->
    <string name="ff_medium">sans-serif-medium</string>
    <string name="ff_regular">sans-serif-regular</string>

    <!-- Profile hints -->

    <string name="mobile_phone">Мобильный телефон</string>
    <string name="email">E-mail</string>
    <string name="vk_link">Профиль в vk</string>
    <string name="repo_link">Репозиторий</string>
    <string name="about_user">О себе</string>

    <!-- Statistic -->

    <string name="rate_value">0</string>
    <string name="rate_statistic">Рейтинг</string>

    <string name="string_value">1000</string>
    <string name="string_statistic">Написано строк кода</string>

    <string name="project_value">0</string>
    <string name="project_statistic">Проектов</string>

    <!-- Navigation drawer menu -->

    <string name="my_profile">Мой профиль</string>
    <string name="team">Команда</string>
    <string name="logout">Выйти из профиля</string>


    <!--User progile photo-->
    <string name="allow_message">Разрешить</string>
    <string name="user_profile.photo.gallery">Загрузить из галереи</string>
    <string name="user_profile.photo.camera">Сделать снимок</string>
    <string name="user_profile.photo.cancel">Отмена</string>
    <string name="user_profile.photo.title">Изменить фотографию профиля</string>
    <string name="user_profile.choose_message">Выберите фото</string>
    <string name="load_foto_not_cancel_message">Для корректной работы приложения необходимо дать требуемые разрешения</string>

    <!-- Defailt user profile data -->
    <string name="profile_phone">88000000000</string>
    <string name="profile_mail">user@mail.ru</string>
    <string name="profile_vk">vk.com/</string>
    <string name="profile_git">github.com/</string>
    <string name="profile_about">О себе</string>


    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Пароль</string>
    <string name="action_sign_in">ВОЙТИ</string>
    <string name="forget_password">Забыли пароль?</string>
    <string name="title_activity_login">Вход</string>
    <string name="title_activity_auth">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <string name="hint_search">Search</string>

</resources>
