<?xml version="1.0" encoding="utf-8"?>


<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main_coordinator_container"
    style="@style/standard_size_mm">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar_layout"
        style="@style/AppTheme.AppBarOverlay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/color_primary">

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/collapsing_toolbar"
            style="@style/standard_size_mw"
            app:contentScrim="@color/color_primary"
            app:layout_scrollFlags="scroll|exitUntilCollapsed|snap">

            <ImageView
                android:id="@+id/user_foto"
                android:layout_width="match_parent"
                android:layout_height="@dimen/profile_image_size"
                android:scaleType="centerCrop"
                android:src="@mipmap/user_bg"/>

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                style="@style/AppTheme.PopupOverlay"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:titleTextColor="@color/white"
                app:layout_collapseMode="pin"
                app:titleTextColor="@color/white"/>

        </android.support.design.widget.CollapsingToolbarLayout>
    </android.support.design.widget.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="112dp"
        android:background="@color/grey"
        android:gravity="center"
        android:orientation="horizontal"
        app:behavior_min_height="@dimen/size_medium_56"
        app:layout_behavior=".ui.behaviors.UserInfoBehavior">

        <LinearLayout
            style="@style/stats_layout"
            android:layout_weight="1">

            <TextView
                android:id="@+id/profile_info_rate_txt"
                style="@style/stats_text.rate"
                android:text="@string/rate_value"/>

            <TextView
                style="@style/stats_text"
                android:text="@string/rate_statistic"/>

        </LinearLayout>

        <View style="@style/view.vertical"/>

        <LinearLayout
            style="@style/stats_layout"
            android:layout_weight="2">

            <TextView
                android:id="@+id/profile_info_codelines_txt"
                style="@style/stats_text.rate"
                android:text="@string/string_value"/>

            <TextView
                style="@style/stats_text"
                android:text="@string/string_statistic"/>

        </LinearLayout>

        <View style="@style/view.vertical"/>

        <LinearLayout
            style="@style/stats_layout"
            android:layout_weight="1">

            <TextView
                android:id="@+id/profile_info_project_txt"
                style="@style/stats_text.rate"
                android:text="@string/project_value"/>

            <TextView
                style="@style/stats_text"
                android:text="@string/project_statistic"/>

        </LinearLayout>
    </LinearLayout>


    <include layout="@layout/static_profile_content"/>

</android.support.design.widget.CoordinatorLayout>

