<android.support.v4.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/standard_size_mm"
    app:layout_behavior=".ui.behaviors.CustomNestedScrollBehavior">

    <LinearLayout
        style="@style/standard_size_mm"
        android:orientation="vertical">

        <LinearLayout
            style="@style/standard_size_mw"
            android:orientation="horizontal">

            <ImageView
                style="@style/icon.left"
                android:src="@drawable/ic_call_black_24dp"/>

            <LinearLayout
                style="@style/layout_vertical.settings">

                <android.support.design.widget.TextInputLayout
                    style="@style/app_text">

                    <EditText
                        android:id="@+id/mobile_et"
                        style="@style/app_text.user"
                        android:hint="@string/mobile_phone"
                        android:inputType="phone"
                        android:maxLength="20"/>
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>

            <ImageView
                android:id="@+id/call_phone_user"
                style="@style/icon.right"
                android:src="@drawable/ic_perm_phone_msg_black_24dp"/>
        </LinearLayout>

        <View
            style="@style/view.settings"/>

        <LinearLayout
            style="@style/standard_size_mw"
            android:orientation="horizontal">

            <ImageView
                style="@style/icon.left"
                android:src="@drawable/ic_email_black_24dp"/>

            <LinearLayout
                style="@style/layout_vertical.settings">

                <android.support.design.widget.TextInputLayout
                    style="@style/app_text">

                    <EditText
                        android:id="@+id/email_et"
                        style="@style/app_text.user"
                        android:hint="@string/email"
                        android:inputType="textEmailAddress"/>
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>

            <ImageView
                android:id="@+id/send_mail_user"
                style="@style/icon.right"
                android:src="@drawable/ic_send_black_24dp"/>
        </LinearLayout>

        <View
            style="@style/view.settings"/>

        <LinearLayout
            style="@style/standard_size_mw"
            android:orientation="horizontal">

            <ImageView
                style="@style/icon.left"
                android:src="@drawable/vk"/>

            <LinearLayout
                style="@style/layout_vertical.settings">

                <android.support.design.widget.TextInputLayout
                    style="@style/app_text">

                    <EditText
                        android:id="@+id/vk_et"
                        style="@style/app_text.user"
                        android:hint="@string/vk_link"
                        android:inputType="textWebEditText"/>
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>

            <ImageView
                android:id="@+id/open_vk_user"
                style="@style/icon.right"
                android:src="@drawable/ic_visibility_black_24dp"/>
        </LinearLayout>

        <View
            style="@style/view.settings"/>

        <LinearLayout
            style="@style/standard_size_mw"
            android:orientation="horizontal">

            <ImageView
                style="@style/icon.left"
                android:src="@drawable/github_circle"/>

            <LinearLayout
                style="@style/layout_vertical.settings">

                <android.support.design.widget.TextInputLayout
                    style="@style/app_text">

                    <EditText
                        android:id="@+id/git_et"
                        style="@style/app_text.user"
                        android:hint="@string/repo_link"
                        android:inputType="textWebEditText"/>
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>

            <ImageView
                android:id="@+id/open_git_user"
                style="@style/icon.right"
                android:src="@drawable/ic_visibility_black_24dp"/>
        </LinearLayout>

        <View
            style="@style/view.settings"/>

        <LinearLayout
            style="@style/standard_size_mw"
            android:orientation="horizontal">

            <ImageView
                style="@style/icon.left"
                android:src="@drawable/ic_account_black_24dp"/>

            <LinearLayout
                style="@style/layout_vertical.settings.about">

                <android.support.design.widget.TextInputLayout
                    style="@style/app_text">

                    <EditText
                        android:id="@+id/about_et"
                        style="@style/app_text.user"
                        android:hint="@string/about_user"
                        android:inputType="textMultiLine"/>
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</android.support.v4.widget.NestedScrollView>