<?xml version="1.0" encoding="utf-8"?>

<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_coordinator_container"
    style="@style/standard_size_mm"
    android:fitsSystemWindows="true"
    tools:ignore="contentDescription">

    <FrameLayout
        style="@style/standard_size_mm"
        android:background="@color/grey_background">

        <ImageView
            style="@style/standard_size_mm"
            android:scaleType="centerCrop"
            android:src="@mipmap/login_bg"/>


        <android.support.v7.widget.CardView
            android:layout_width="240dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="2dp"
            app:cardElevation="8dp">

            <LinearLayout
                style="@style/standard_size_mm"
                android:orientation="vertical">

                <LinearLayout
                    style="@style/standard_size_mw"
                    android:layout_marginBottom="@dimen/spacing_normal_16"
                    android:orientation="horizontal"
                    android:paddingTop="@dimen/spacing_medium_32">

                    <View
                        android:layout_width="@dimen/line_size_4dp"
                        android:layout_height="match_parent"
                        android:layout_marginRight="20dp"
                        android:background="@color/color_accent"/>

                    <TextView
                        style="@style/standard_size_mw"
                        android:fontFamily="sans-serif-medium"
                        android:paddingBottom="@dimen/spacing_small_8"
                        android:paddingTop="@dimen/spacing_small_8"
                        android:text="@string/action_sign_in"
                        android:textAllCaps="true"
                        android:textColor="@color/color_accent"
                        android:textSize="@dimen/typography_medium_20"/>
                </LinearLayout>


                <LinearLayout
                    style="@style/standard_size_mw"
                    android:layout_gravity="bottom"
                    android:orientation="vertical"
                    android:paddingBottom="@dimen/spacing_medial_24"
                    android:paddingLeft="@dimen/spacing_medial_24"
                    android:paddingRight="@dimen/spacing_medial_24">


                    <android.support.design.widget.TextInputLayout
                        style="@style/standard_size_mw">

                        <EditText
                            android:id="@+id/login_email_et"
                            style="@style/standard_size_mw"
                            android:fontFamily="sans-serif-regular"
                            android:hint="@string/prompt_email"
                            android:inputType="textEmailAddress"
                            android:textColor="@color/grey"
                            android:textColorHint="@color/grey_login"
                            android:textSize="@dimen/typography_medium_14"/>
                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        style="@style/standard_size_mw">

                        <EditText
                            android:id="@+id/login_password_et"
                            style="@style/standard_size_mw"
                            android:fontFamily="sans-serif-regular"
                            android:hint="@string/prompt_password"
                            android:inputType="textPassword"
                            android:textColor="@color/grey"
                            android:textColorHint="@color/grey_login"
                            android:textSize="@dimen/typography_medium_14"/>

                    </android.support.design.widget.TextInputLayout>


                    <Button
                        android:id="@+id/sign_in_button"
                        style="@style/AppTheme.Button.Red"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="@dimen/spacing_normal_16"
                        android:background="@drawable/shape_button"
                        android:minWidth="126dp"
                        android:text="@string/action_sign_in"
                        android:textAllCaps="true"
                        android:theme="@style/AppTheme.Button.Red"/>

                    <TextView
                        android:id="@+id/remember_txt"
                        style="@style/standard_size_ww"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="@dimen/spacing_normal_16"
                        android:text="@string/forget_password"
                        android:textColor="@color/grey"
                        android:textSize="@dimen/typography_medium_14"/>
                </LinearLayout>
            </LinearLayout>
        </android.support.v7.widget.CardView>
    </FrameLayout>
</android.support.design.widget.CoordinatorLayout>